mychart/templates/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-crud-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service-service.auth-kuber-service-space.svc.cluster.local:8090/auth/validate"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kuber-crud-app-service
                port:
                  number: 8090
